[package]
name = "rust-pushrod"
version = "0.4.17"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-pushrod/"
documentation = "http://docs.rs/crate/rust-pushrod/"
keywords = ["sdl", "sdl2", "opengl", "ui", "gui"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "pushrod"
path = "src/lib.rs"

[dependencies.sdl2]
version = "^0.32"
features = ["ttf", "image"]
