[package]
name = "rust-pushrod-render"
version = "0.1.10"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod Rendering Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-pushrod-render/"
documentation = "http://docs.rs/crate/rust-pushrod-render/"
keywords = ["sdl2", "opengl", "ui", "gui", "pushrod"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
build = "build.rs"

[lib]
name = "pushrod_render"
path = "src/lib.rs"

[dependencies]
sdl2 = "^0.32"
