[package]
name = "rust-pushrod-widgets"
version = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod Rendering Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-pushrod-render/"
documentation = "http://docs.rs/crate/rust-pushrod-render/"
keywords = ["sdl2", "opengl", "ui", "gui", "pushrod"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "pushrod_widgets"
path = "src/lib.rs"

[dependencies]
rust-pushrod-render = "^0.1"

[dependencies.sdl2]
version = "^0.32"
features = ["ttf"]

